# ecg_mlops_pipeline

./: Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
models/: best_model.pth
scripts/: simulate_traffic.py  single_prediction.py
src/: api.py  data_loader.py  model.py  retrain_job.py  train.py
tests/: test_api.py
