[project]
name = "ecg-mlops-pipeline"
version = "0.1.0"
description = "A complete MLOps pipeline for ECG anomaly detection using PyTorch, FastAPI, Prometheus, and Docker."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sebastian Lijewski" },
]
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "pandas",
    "numpy",
    "scikit-learn",
    "fastapi",
    "uvicorn",
    "prometheus-client",
    "pytest",
    "requests",
    "kagglehub[pandas-datasets]",
    "httpx>=0.28.1",
]

[tool.uv]
managed = true
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
